--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,6 +29,8 @@ jobs:
         VERSION=1.0.0
         curl -sSL "https://github.com/facebook/infer/releases/download/v$VERSION/infer-linux64-v$VERSION.tar.xz" | sudo tar -C /opt -xJ 
         ls "/opt/infer-linux64-v$VERSION/bin"
+        sudo ln -s "/opt/infer-linux64-v$VERSION/bin/infer" /usr/local/bin/infer
+        ls /usr/local/bin
         
       #&& \
     #  ln -s "/opt/infer-linux64-v$VERSION/bin/infer" /usr/local/bin/infer
