--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -32,7 +32,9 @@ jobs:
         sudo ln -s "/opt/infer-linux64-v$VERSION/bin/infer" /usr/local/bin/infer
         ls /usr/local/bin
     - name: Run Infer
-      run: infer run -- ./gradlew build
+      run: |
+        ./gradlew clean
+        infer run -- ./gradlew build
         
         
       #&& \
