--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,23 +22,16 @@ jobs:
         java-version: 1.8
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
+#    - name: Build with Gradle
+#      run: ./gradlew build
     - name: Install Infer
       run: |
         VERSION=1.0.0
         curl -sSL "https://github.com/facebook/infer/releases/download/v$VERSION/infer-linux64-v$VERSION.tar.xz" | sudo tar -C /opt -xJ 
-        ls "/opt/infer-linux64-v$VERSION/bin"
         sudo ln -s "/opt/infer-linux64-v$VERSION/bin/infer" /usr/local/bin/infer
-        ls /usr/local/bin
+#        ls "/opt/infer-linux64-v$VERSION/bin"
+#        ls /usr/local/bin
     - name: Run Infer
-      run: |
-        ./gradlew clean
-        infer run -- ./gradlew build
-        
-        
-      #&& \
-    #  ln -s "/opt/infer-linux64-v$VERSION/bin/infer" /usr/local/bin/infer
-        
-    #- name: Install Infer
-   # run: curl -sSL "https://github.com/facebook/infer/releases/download/v1.0.0/infer-linux64-v1.0.0.tar.xz" | sudo tar -xJ  
+      run: infer run -- ./gradlew clean build
+#        ./gradlew clean
+
