--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -15,6 +15,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Checkout Code
     - uses: actions/checkout@v2
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
@@ -36,4 +37,10 @@ jobs:
       run: curl -sfL https://raw.githubusercontent.com/reviewdog/reviewdog/master/install.sh | sh -s
     - name: Run Infer
       run: infer run -- ./gradlew clean build
+# https://docs.github.com/en/free-pro-team@latest/actions/guides/building-and-testing-java-with-gradle
+    - name: Save Artifacts/Packages
+    - uses: actions/upload-artifact@v2
+      with:
+        name: Package
+        path: build/libs
 
