--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,9 +34,12 @@ jobs:
 #        ls /usr/local/bin
 # Install the latest version. (Install it into ./bin/ by default).
     - name: Install Reviewdog
-      run: |
-        curl -sfL https://raw.githubusercontent.com/reviewdog/reviewdog/master/install.sh | sh -s
-        ls ./bin
+      uses: reviewdog/action-setup@v1
+    - name: Print Reviewdog version
+      run: reviewdog -version
+#      run: |
+#        curl -sfL https://raw.githubusercontent.com/reviewdog/reviewdog/master/install.sh | sh -s
+#        ls ./bin
     - name: Run Infer
       run: infer run -- ./gradlew clean build
 # https://docs.github.com/en/free-pro-team@latest/actions/guides/building-and-testing-java-with-gradle
