--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -41,9 +41,11 @@ jobs:
 #        curl -sfL https://raw.githubusercontent.com/reviewdog/reviewdog/master/install.sh | sh -s
 #        ls ./bin
     - name: Run Infer
+      env:
+        REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         ./gradlew clean
-        infer run -- ./gradlew build | reviewdog -f=checkstyle -name="infer" -reporter=github-check
+        infer run -- ./gradlew build | reviewdog -f=checkstyle -name="infer" -reporter=github-pr-check
 # https://docs.github.com/en/free-pro-team@latest/actions/guides/building-and-testing-java-with-gradle
     - name: Cache Gradle packages
       uses: actions/cache@v2
