--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -45,7 +45,13 @@ jobs:
         REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         ./gradlew clean
+        echo "*** Starting raw infer ***"
+        infer run -- ./gradlew build
+        echo "*** Ending raw infer ***"
+        ./gradlew clean
+        echo "*** Starting reveiwdog infer ***"
         infer run -- ./gradlew build | reviewdog -efm="%f:%l: %m" -name="infer" -reporter=github-pr-check
+        echo "*** Ending raw infer ***"
 # https://docs.github.com/en/free-pro-team@latest/actions/guides/building-and-testing-java-with-gradle
     - name: Cache Gradle packages
       uses: actions/cache@v2
