--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -11,9 +11,7 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout Code
       uses: actions/checkout@v2
@@ -24,7 +22,13 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
 #    - name: Build with Gradle
-#      run: ./gradlew build
+#      run: ./gradlew buil
+    - name: Run check style
+      uses: nikitasavinov/checkstyle-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        reporter: 'github-pr-check'
+        tool_name: 'testtool'
     - name: Install Infer
       run: |
         VERSION=1.0.0
